<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StaticsticActivity">

    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="jumpToBack"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_back"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"

        android:fontFamily="@font/days_one"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_bunkers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"

        android:text="@string/tableBunkerList"
        android:fontFamily="@font/days_one"
        android:textColor="@color/teal_200"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textSize="28sp"
        android:gravity="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar" />

    <TableLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_bunkers">

        <TableRow>

            <TextView
                android:id="@+id/column_number"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/baseTextColor"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/tableNumber" />

            <TextView
                android:id="@+id/column_feed_brand"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/baseTextColor"
                android:gravity="center"
                android:text="@string/tableFeedBrand" />

            <TextView
                android:id="@+id/column_plan"
                android:layout_width="0dp"
                android:layout_weight="0.17"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/baseTextColor"
                android:gravity="center"
                android:text="@string/tablePlan" />

            <TextView
                android:id="@+id/column_fact"
                android:layout_width="0dp"
                android:layout_weight="0.17"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/baseTextColor"
                android:gravity="center"
                android:text="@string/tableFact" />

            <TextView
                android:id="@+id/column_driver"
                android:layout_width="0dp"
                android:layout_weight="0.36"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/baseTextColor"
                android:gravity="center"
                android:text="@string/tableDriver" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/scroll_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="156dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_header">

        <TableLayout
            android:id="@+id/table_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableLayout>

    </ScrollView>

    <TableLayout
        android:id="@+id/table_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/table_date"
        >

        <TableRow>

            <TextView
                android:id="@+id/column_total_text"
                android:layout_width="0dp"
                android:layout_weight="0.42"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/baseTextColor"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/tableTotalText" />

            <TextView
                android:id="@+id/column_plan_total"
                android:layout_width="0dp"
                android:layout_weight="0.17"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/baseTextColor"
                android:gravity="center"
                android:text="0" />

            <TextView
                android:id="@+id/column_fact_total"
                android:layout_width="0dp"
                android:layout_weight="0.17"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/baseTextColor"
                android:gravity="center"
                android:text="0" />

            <TextView
                android:id="@+id/column_none"
                android:layout_width="0dp"
                android:layout_weight="0.36"
                android:fontFamily="@font/days_one"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/table_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"

        android:fontFamily="@font/days_one"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/tableDate"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>