<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChooseDateActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="jumpToMainPage"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_back"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"

        android:fontFamily="@font/days_one"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_bunker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"

        android:fontFamily="@font/days_one"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/tableCountBunker"
        android:textColor="@color/baseTextColor"
        android:textSize="20sp"

        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/days_one"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/tableDate"
        android:textColor="@color/baseTextColor"
        android:textSize="20sp"

        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/choose_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"

        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/days_one"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="1"
        app:cornerRadius="16dp"
        android:text="@string/chooseDate"
        android:textSize="20sp"
        android:onClick="setDate"

        app:layout_constraintTop_toBottomOf="@id/table_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/days_one"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="1"
        app:cornerRadius="16dp"
        android:text="@string/gotoTable"
        android:textSize="20sp"
        android:onClick="jumpToTablePage"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>